--- a/CRUD2.1/pom.xml
+++ b/CRUD2.1/pom.xml
@@ -30,6 +30,18 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.28.0-RC1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
